2007-02-21  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread-functions.h: Correct last patch, correct
	PTHFCT_CALL definition.

2007-02-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread-functions.h: If PTR_DEMANGLE is not
	available, don't use it.

2007-02-09  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S
	(__lll_mutex_timedlock_wait): Use correct pointer when we don't
	call into the kernel to delay.

2007-01-18  Ulrich Drepper  <drepper@redhat.com>

	* tst-initializers1.c: We want to test the initializers as seen
	outside of libc, so undefined _LIBC.

	* pthread_join.c (cleanup): Avoid warning.

2007-01-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S
	(__lll_timedwait_tid): Add unwind info.

	* sysdeps/unix/sysv/linux/libc_pthread_init.c: Don't just copy the
	function table, mangle the pointers.
	* sysdeps/pthread/pthread-functions.h: Define PTHFCT_CALL.
	* forward.c: Use PTHFCT_CALL and __libc_pthread_functions_init.
	* sysdeps/pthread/bits/libc-lock.h: When using __libc_pthread_functions
	demangle pointers before use.
	* sysdeps/unix/sysv/linux/s390/jmp-unwind.c: Use PTHFCT_CALL to
	demangle pointer.
	* sysdeps/unix/sysv/linux/jmp-unwind.c: Likewise.
	* sysdeps/pthread/setxid.h: Likewise.

2007-01-12  Ulrich Drepper  <drepper@redhat.com>

	* tst-rwlock7.c: Show some more information in case of correct
	behavior.

2007-01-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h
	(lll_futex_timed_wait): Undo part of last change, don't negate
	return value.

2007-01-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h: Cleanups.  Define
	FUTEX_CMP_REQUEUE and lll_futex_requeue.

2006-12-28  David S. Miller  <davem@davemloft.net>

	* shlib-versions: Fix sparc64 linux target specification.

2007-01-10  Jakub Jelinek  <jakub@redhat.com>
